--- a/src/features/card/card.css
+++ b/src/features/card/card.css
@@ -1,4 +1,4 @@
-.card {
+/*.card {
     display: flex;
     flex-direction: column;
 }
@@ -22,4 +22,4 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
+}*/
