--- a/src/features/language/language.css
+++ b/src/features/language/language.css
@@ -1,4 +1,4 @@
-.language {
+/*.language {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -13,4 +13,4 @@
 .language-button.active {
     color: white;
     background-color: #17589f;
-}
+}*/
